add site counter

--- a/resume.html
+++ b/resume.html
@@ -1,39 +1,49 @@
-<link rel="stylesheet" type="text/css" href="resume.css" media="screen" />
-<div id="header"></div>
-<div class="left"></div>
-<div class="content">
-  <br><br>
-  <h1>Carol</h1>
-  <h2>Software Engineer</h2>
-  <hr />
-  <br>
-  <p class="head">Skills</p>
-  <ul>
-    <li>Python</li>
-    <li>PostgreSQL</li>
-  </ul>
-  <p class="head">Experience</p>
-  <ul>
-    <li>Software Engineer</li>
-    <li>Junior Software Engineer</li>
-    <li>Research Assistant</li>
-    <li>Digital Producer</li>
-    <li>Associate Editor</li>
-  </ul>
-  <p class="head">Education</p>
-  <ul>
-    <li>Masters Degree in Computer Science</li>
-    <li>Bachelors Degree in Anthropology</li>
-  </ul>
-  <p class="head">Interests</p>
-  <ul>
-    <li>Painting</li>
-    <li>Knitting</li>
-    <li>Design</li>
-    <li>Programming</li>
-    <li>Computer Science</li>
-  </ul>
-</div>
-<div class="right"></div>
-<div id="footer">
-  <h2 id="name">Carol</h2></div>
+<head>
+  <link rel="stylesheet" type="text/css" href="resume.css" media="screen" />
+  <script defer src=counter.js></script>
+</head>
+<body>
+  <div id="header"></div>
+  <div class="left"></div>
+  <div class="content">
+    <br><br>
+    <h1>Carol</h1>
+    <h2>Software Engineer</h2>
+    <hr />
+    <br>
+    <p class="head">Skills</p>
+    <ul>
+      <li>Python</li>
+      <li>PostgreSQL</li>
+    </ul>
+    <p class="head">Experience</p>
+    <ul>
+      <li>Software Engineer</li>
+      <li>Junior Software Engineer</li>
+      <li>Research Assistant</li>
+      <li>Digital Producer</li>
+      <li>Associate Editor</li>
+    </ul>
+    <p class="head">Education</p>
+    <ul>
+      <li>Masters Degree in Computer Science</li>
+      <li>Bachelors Degree in Anthropology</li>
+    </ul>
+    <p class="head">Interests</p>
+    <ul>
+      <li>Painting</li>
+      <li>Knitting</li>
+      <li>Design</li>
+      <li>Programming</li>
+      <li>Computer Science</li>
+    </ul>
+  </div>
+  <div class="right"></div>
+  <div id="footer">
+    <h2 id="name">Carol</h2>
+    <div class="visitors">
+      <p>Visitors:</p>
+      <div class="visitor-counter"></div>
+    </div>
+  </div>
+</body>
