--- a/resume.html
+++ b/resume.html
@@ -33,9 +33,8 @@
     <ul>
       <li>Painting</li>
       <li>Knitting</li>
-      <li>Design</li>
-      <li>Programming</li>
-      <li>Computer Science</li>
+      <li>Fitness</li>
+      <li>Music</li>
     </ul>
   </div>
   <div class="right"></div>
