fix visit counter

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="resume.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
   <script defer src=counter.js></script>
 </head>
 <body>
@@ -15,6 +15,7 @@
     <ul>
       <li>Python</li>
       <li>PostgreSQL</li>
+      <li>Kubernetes</li>
     </ul>
     <p class="head">Experience</p>
     <ul>
@@ -31,18 +32,15 @@
     </ul>
     <p class="head">Interests</p>
     <ul>
-      <li>Painting</li>
+      <li>Music</li>
       <li>Knitting</li>
       <li>Fitness</li>
-      <li>Music</li>
+      <li>Painting</li>
     </ul>
   </div>
   <div class="right"></div>
   <div id="footer">
     <h2 id="name">Carol</h2>
-    <div class="visitors">
-      <p>Visitors:</p>
-      <div class="visitor-counter"></div>
-    </div>
+    <div class="visit-counter"></div>
   </div>
 </body>
